refactor(CompilationEnvironment): replace `getClassTypeMap()` with `getGeneratedClasses()`